--- a/reporting/Appendix.Rmd
+++ b/reporting/Appendix.Rmd
@@ -48,11 +48,11 @@ criteria_df %>% pandoc.table(caption = "criteria for model selection") %>% pande
 
 The `meuse` data set contains locations, topsoil heavy metal concentrations and a number of soil and landscape variables at the observed locations in a flood plain of the river Meuse. The `meuse` data set can be accessed from **R** package `gstat`, and it is a `data.frame` object. 
 
-For this data set, an universal kriging model and a continuous spatial process with a Matérn covariance function using the INLA-SPDE approach (referred to as the SPDE model) are fitted, and results include...... 
+For this data set, an universal kriging model and a continuous spatial process with a Matérn covariance function using the INLA-SPDE approach (referred to as the SPDE model) are fitted, and results include summary results and predicted plots of kriging vs SPDE. 
 
 The steps for fitting an universal kriging model include: (1) convert the `data.frame` objaction to a `SpatialPointsDataFrame` object, (2) calculate the empirical/sample variogram and fit a spherical variogram model to the sample variogram, and (3) fit the universal kriging model using the fitted variogram. The steps for fitting the SPDE model are more involved. These steps include: (1) define the boundary and create a mash to approximate the continuous GF (Gaussian field) as a discrete GMRF (Gaussian Markov random field), (2) make the latent model/create a SPDE model on the mesh, (3) make a projection matrix $A$ to map the F from the observed points to the triangulation vertices, (4) organize the data to be in a particular format for estimation and prediction and join stacks of data, (5) fit the model. 
 
-Results show that the universal kriging and the SPDE model provide similar estimates. For the fitted variogram model, sill (or variance) $= 0.2053$, nugget (i.e., variance when distance $= 0$) $= 0.07643$, and range $= 728.7$. For the SPDE model, mean variance $= 0.2351$ with $Q1 = 0.183$ and $Q3 = 0.2754$, and max range $= 955.8$. 
+Results show that the universal kriging and the SPDE model provide similar estimates. For the fitted variogram model, sill (or variance) $= 0.2053$, nugget (i.e., variance when distance $= 0$) $= 0.07643$, and range $= 728.7$. For the SPDE model, mean variance $= 0.2351$ with $Q1 = 0.183$ and $Q3 = 0.2754$, and max range $= 955.8$ (This value is a bit higher than expected). 
 
 ```{r echo=FALSE, message=FALSE}
 fit.vgm <- readRDS(here("results", "fit.vgm.rds"))
@@ -89,7 +89,7 @@ get_summary(variance) %>% pandoc.table(caption = "variance from SPDE") %>% pande
 get_summary(range) %>% pandoc.table(caption = "range from SPDE") %>% pander
 ```
 
-Both plots show higher estimated means of log-concentrations of zinc at locations closer to the Meuse river. The differences may be due to the ways how the models were defined and and how their model components were specified. 
+Both plots show higher estimated means of log-concentrations of zinc at locations closer to the Meuse river. The differences may be due to the ways how the models were defined and how their model components were specified. 
 
 ```{r echo=FALSE, message=FALSE}
 p_krg <- readRDS(here("results", "p_krg.rds"))
